--- a/src/AdminPanal/About.css
+++ b/src/AdminPanal/About.css
@@ -10,9 +10,19 @@
     flex-direction: column;
     height: 100vh;
     width: 100vw;
-    border: 2px solid black;
     margin-top: 7rem;
     margin-left: -19.5rem;
+    padding: 0.6rem;
+}
+.error {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    margin-top: 7rem;
+    margin-left: -7.3rem;
     padding: 0.6rem;
 }
 .user__table {
@@ -21,27 +31,45 @@
     flex-direction: column;
     height: 100vh;
     width: 100vw;
-    border: 2px solid green;
 }
 .user__table tr {
     display: flex;
-    border: 1px solid blue;
     height: 10vh;
     width: 77vw;
-    color: blue;
+    color: #600BD6;
     margin-left: -16rem;
 }
 .user__table tr th {
-    border: 1px solid red;
     height: 10vh;
     width: 60vw;
     color: blue;
     padding: 1rem;
 }
 .user__table tr td {
-    border: 1px solid red;
     height: 10vh;
     width: 60vw;
     color: blue;
     padding: 1rem;
+}
+.action {
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+.action button {
+    background-color: #600BD6;
+    height: 7.5vh;
+    width: 3.5vw;
+    border-radius: 50px;
+    border: none;
+    color: #fff;
+    font-size: x-large;
+    transition: all .9s ease-in;
+}
+.action button:hover {
+    background: none;
+    border: 5px solid #600BD6;
+    color: #600BD6;
+    transition: all .9s ease-out;
 }
