--- a/src/AdminPanal/About.css
+++ b/src/AdminPanal/About.css
@@ -14,6 +14,17 @@
     margin-left: -19.5rem;
     padding: 0.6rem;
 }
+.errorMesssage {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    margin-top: 7rem;
+    margin-left: -19.5rem;
+    padding: 0.6rem;
+}
 .error {
     position: relative;
     display: flex;
