--- a/src/AdminPanal/About.css
+++ b/src/AdminPanal/About.css
@@ -25,6 +25,17 @@
     margin-left: -19.5rem;
     padding: 0.6rem;
 }
+.edit__page {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    margin-top: 4rem;
+    padding: 0.6rem;
+}
 .error {
     position: relative;
     display: flex;
@@ -83,4 +94,75 @@
     border: 5px solid #600BD6;
     color: #600BD6;
     transition: all .9s ease-out;
+}
+.emploment__inner {
+    width: 80vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+}
+.emploment__content {
+    display: flex;
+    flex-direction: column;
+}
+.emploment__inner input {
+    border: 2px solid #600BD6;
+    height: 8vh;
+    width: 20vw;
+    border-radius: 0.9rem;
+    background: none;
+    outline: none;
+    padding: 1rem;
+}
+.emploment__inner input::placeholder {
+    color: #600BD6;
+    font-family: cursive;
+}
+.edit__container {
+    width: 50vw;
+    height: 65vh;
+    display: flex;
+    gap: 2rem;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 3px 5px 20px gray;
+    border-radius: 50px;
+    padding: 1rem;
+}
+.edit__container h3 {
+    color: #600BD6;
+    font-size: 1.7em;
+    font-family: cursive;
+    font-weight: 700;
+}
+.edit__container input {
+    height: 8vh;
+    width: 40vw;
+    border: 2px solid #600BD6;
+    border-radius: 13px;
+    outline: none;
+    padding: 1.2rem 2rem;
+}
+.edit__container input::placeholder {
+    color: #600BD6;
+    font-family: cursive;
+    font-weight: 600;
+}
+.edit__container button {
+    height: 8vh;
+    width: 40vw;
+    color: #600BD6;
+    font-size: 1.2em;
+    font-family: cursive;
+    font-weight: 600;
+    background: none;
+    border: 4px solid #600BD6;
+    border-radius: 13px;
+    transition: all .9s ease-out;
+}
+.edit__container button:hover {
+    background-color: #600BD6;
+    color: #fff;
+    transition: all .9s ease-in;
 }
