--- a/src/Intro/Intro.css
+++ b/src/Intro/Intro.css
@@ -3,8 +3,54 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root {
+    --index: calc(1vw + 1vw);
+    --text: #e7e7e0;
+    --transition: transform 0.75s cubic-bezier(0.075, 0.5, 0, 1);
+}
+@font-face {
+    font-family: 'Poppins', sans-serif;
+    src: url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+    font-weight: 900;
+}
 .intro__header {
-    margin-top: 6.2rem;
-    height: 100%;
+    /* position: relative; */
+    border: 2px solid orange;
+    height: 90vh;
     width: 100%;
+    margin-top: 0.8rem;  
+    padding: 3rem;
+}
+
+.zoom {
+    width: 110%;
+    height: 900px;
+    position: relative;
+    /* z-index: 1000; */
+    overflow: hidden;
+    background: url("../img/mountain4.jpg");
+    background-size: cover;
+    margin-left: -3.5rem;
+}
+.zoom::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    background: linear-gradient(transparent, #fff);
+    bottom: 0%;
+}
+#img1 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 100;
+}
+#img2 {
+    position: absolute;
+    /* z-index: 100; */
+}
+#img3 {
+    position: absolute;
+    transform: translateX(40%);
 }
