--- a/src/Portfolio/Portfolio.css
+++ b/src/Portfolio/Portfolio.css
@@ -11,6 +11,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
+    overflow: scroll;
     margin-top: 8rem;
 }
 .image-container img {
@@ -44,25 +45,23 @@
 
 .Portfolio {
     position: relative;
-    border: 2px solid black;
-    height: 205vh;
+    height: 100vh;
     width: 100vw;
     display: flex;
+    gap: 1rem;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background: none;
-    padding: 20px 10%;
+    /* padding: 20px 10%; */
     margin-top: 6.1rem;
 }
 .buttons {
     position: absolute;
     top: 40px;
-    padding: 30px;
+    /* padding: 30px; */
 }
 .buttons button {
-    padding: 15px 30px;
-    margin-right: 20px;
     color: #fff;
     background-color: #6E56B5;
     font-size: 20px;
@@ -70,4 +69,9 @@
     border: none;
     outline: none;
     cursor: pointer;
+    padding: 15px 30px;
+    margin-right: 20px;
+}
+.filter__img {
+    border: 2px solid red;
 }
