--- a/src/Intro/Intro.css
+++ b/src/Intro/Intro.css
@@ -47,7 +47,7 @@
     border-radius: 50%;
     box-shadow: 0 0 0 10px #4fc3dc44, 0 0 50px #4fc3dc, 0 0 100px #4fc3dc;
     animation: animate 15s linear infinite;
-    /* animation-duration: ; */
+    animation-duration: calc(10s / 7);
 }
 @keyframes animate {
     0% {
