--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,25 @@
   box-sizing: border-box;
 }
 body {
+  width: calc(100vw / 100%);
   overflow-x: hidden;
-  scroll-behavior: smooth;  
+  scroll-behavior: smooth; 
+  position: relative;
+}
+.selectingcolor {
+  color: rgb(187, 103, 255);
+}
+body::-webkit-scrollbar {
+  width: 0.9em;
+}
+body::-webkit-scrollbar-track {
+  background-clip: content-box;
+  padding: 3rem;
+}
+body::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent 5%, #242d49);
+  background-clip: content-box;
+  border-radius: 50px;
 }
 
 :root {
@@ -22,6 +39,7 @@ body {
 }
 
 .main__section {
+  position: relative;
   height: 100%;
   width: 100vw;
   display: flex;
@@ -34,6 +52,15 @@ body {
   font-weight: 400;
   color: black;
   font-family: cursive;
+}
+
+.main__section video {
+  height: auto;
+  width: 100vw;
+  position: fixed;
+  background-attachment: fixed;
+  top: 0rem;
+  right: 0;
 }
 
 .main__section h1 span {
@@ -162,17 +189,64 @@ body {
 
 }
 
-
-@media screen and (max-width: 768px) {
+/* @media(min-aspect-ratio: 16/9) {
+  .main__section video {
+    width: 100%;
+    height: 100vh;
+  }
+} */
+@media screen and (max-width: 768px) and (min-width: 600px) {
   body {
     overflow-x: hidden;
     width: calc(100vw - 100%);
+  }
+  .main__section {
+    position: relative;
+    height: 100%;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-position: center;
+    background-size: center;
+  }
+  
+  .main__section video {
+    height: 100vh;
+    width: 100vw;
+    display: none;
+    position: fixed;
+    background-attachment: fixed;
+    top: 0;
+    left: 0;
   }
 }
 @media screen and (max-width: 600px) {
   body {
     overflow-x: hidden;
     width: calc(100vw - 100%);
+  }
+  .main__section {
+    position: relative;
+    height: 100%;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-position: center;
+    background-size: center;
+  }
+  
+  .main__section video {
+    height: 100vh;
+    width: 100vw;
+    display: none;
+    position: fixed;
+    background-attachment: fixed;
+    top: 0;
+    left: 0;
   }
 }
 @media screen and (max-width: 429px) {
@@ -191,6 +265,27 @@ body {
   body {
     overflow-x: hidden;
     width: calc(100vw = 100%);
+  }
+  .main__section {
+    position: relative;
+    height: 100%;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-position: center;
+    background-size: center;
+  }
+  
+  .main__section video {
+    height: 100vh;
+    width: 100vw;
+    display: none;
+    position: fixed;
+    background-attachment: fixed;
+    top: 0;
+    left: 0;
   }
 }
 @media screen and (max-width: 1200px) and (min-width: 993px) {
