--- a/src/Home/About__Company/AboutCompany.css
+++ b/src/Home/About__Company/AboutCompany.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: -3rem;
 }
 
 .about__campany__cantainer {
