--- a/src/Home/Contact/Contact.css
+++ b/src/Home/Contact/Contact.css
@@ -19,18 +19,17 @@
     width: 95vw;
     display: flex;
     justify-content: center;
+    padding: 2.9rem;
 }
 
 .contact__content {
-    position: relative;
-    left: 4rem;
     height: 110vh;
     width: 50vw;
     display: flex;
     align-items: center;
     flex-direction: column;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 70px 0px 0px 70px;
     /* margin-top: 4rem; */
 }
 
@@ -139,7 +138,7 @@
 }
 
 .contact__content2 {
-    height: 90vh;
+    height: 80vh;
     width: 75vw;
     display: flex;
     justify-content: center;
@@ -148,32 +147,19 @@
     margin-top: 0.4rem;
 }
 
-.contact__content2 img {
-    position: absolute;
-    right: -1rem;
-    height: 120vh;
+.contact__content2 video {
+    height: 110vh;
     width: 53vw;
     object-fit: cover;
-    border-radius: 100px  0px 0px 30px;
+    border-radius: 0px 70px 70px 0px;
 }
-/* @media screen and (max-width: 768px ) {
-    .contact {
-        border: 2px solid red;
-        height: 300vh;
-        margin-top: -30rem;
-    }
-    .contact__cantainer {
-        display: flex;
-        flex-direction: column;
 
-    }
-} */
-
-/* @media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) and (min-width: 600px) {
     .contact {
         height: 190vh;
         margin-top: 6rem;
     }
+
     .contact__cantainer {
         height: 170vh;
         margin-top: 6rem;
@@ -259,12 +245,16 @@
 
 @media screen and (max-width: 600px) {
     .contact {
-        height: 200vh;
-        margin-top: 5rem;
+        height: 120vh;
+        margin-top: -35rem;
     }
+
     .contact__cantainer {
         height: 190vh;
-        margin-top: 10rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: -1rem;
     }
 
     .contact__content2 {
@@ -274,14 +264,20 @@
     .contact__content {
         height: 160vh;
         width: 80vw;
-        margin-left: -8rem;
+        margin-left: 2rem;
+    }
+
+    .contact__content h1 {
+        font-size: 2.2em;
     }
 
     .inputs {
         width: 70vw;
-        height: 130vh;
+        height: 105vh;
         display: flex;
         flex-direction: column;
+        margin-top: -1rem;
+        border: 2px solid red;
     }
 
     .inputs input {
@@ -297,6 +293,10 @@
         display: flex;
         flex-direction: column;
         margin-left: 0rem;
+    }
+
+    .item1 #contactThirdInp {
+        width: 62vw;
     }
 
     .checkbox__item {
@@ -323,7 +323,7 @@
     .contacts {
         height: 9.4vh;
         width: 30vw;
-        margin-top: 1em;
+        /* margin-top: -10em; */
     }
 
     .contact__btn {
@@ -340,13 +340,14 @@
         background-color: #4722E3;
         color: #000;
         transition: all ease-in-out .7s;
-    }  
+    }
 }
 
 @media screen and (max-width: 429px) {
     .contact {
         height: 160vh;
     }
+
     .contact__cantainer {
         height: 170vh;
         margin-top: 13rem;
@@ -383,14 +384,14 @@
         flex-direction: column;
         margin-left: 0rem;
     }
-    
+
     .checkbox__item {
         width: 69.4vw;
         display: flex;
         justify-content: start;
         flex-direction: row;
     }
-    
+
     .interested {
         width: 27vw;
         margin-left: 1.3rem;
@@ -424,27 +425,29 @@
         background-color: #4722E3;
         color: #000;
         transition: all ease-in-out .7s;
-    }  
+    }
 }
 
 @media screen and (max-width: 300px) {
     .contact {
         height: 165vh;
     }
+
     .contact__cantainer {
         height: 170vh;
         margin-top: 13rem;
     }
-    
+
     .contact__content2 {
         display: none;
     }
-    
+
     .contact__content {
         height: 150vh;
         width: 80vw;
         margin-left: -8rem;
     }
+
     .contact__content h1 {
         font-size: 2.2em;
     }
@@ -470,7 +473,7 @@
         flex-direction: column;
         margin-left: 0rem;
     }
-    
+
     .checkbox__item {
         width: 69.4vw;
         display: flex;
@@ -478,7 +481,7 @@
         flex-direction: column;
         margin-top: 1em;
     }
-    
+
     .interested {
         width: 54vw;
         height: 6vh;
@@ -514,7 +517,7 @@
         background-color: #4722E3;
         color: #000;
         transition: all ease-in-out .7s;
-    }  
+    }
 }
 
 @media screen and (max-width: 992px) and (min-width: 769px) {
@@ -526,6 +529,7 @@
         height: 190vh;
         margin-top: 15rem;
     }
+
     .contact__cantainer {
         height: 170vh;
         margin-top: 6rem;
@@ -618,6 +622,7 @@
         height: 190vh;
         margin-top: 15rem;
     }
+
     .contact__cantainer {
         height: 170vh;
         margin-top: 6rem;
@@ -698,4 +703,4 @@
         color: #000;
         transition: all ease-in-out .7s;
     }
-} */
+}
