--- a/src/Home/Portfolio/Portfolio.css
+++ b/src/Home/Portfolio/Portfolio.css
@@ -60,7 +60,12 @@
 
 .portfolio__content p {
     margin-top: 0.9rem;
-    color: #979899;
+    color: #fff;
+    font-family: monospace;
+    font-style: italic;
+    font-weight: bold;
+    background-color: #4722E3;
+    filter: drop-shadow(2px 6px 30px black);
 }
 
 .portfolio__link {
@@ -94,10 +99,10 @@
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) and (min-width: 600px) {
     .Portfolio {
         height: 150vh;
-        margin-top: 20rem;
+        margin-top: -40rem;
     }
     .Portfolio__cantainer {
         width: 100vw;
@@ -125,22 +130,23 @@
     }
     .portfolio__content2 {
         width: 62vw;
-        margin-top: 16rem;
+        margin-top: -8rem;
     }
 }
 
 @media screen and (max-width: 600px) {
     .Portfolio {
-        height: 150vh;
-        margin-top: 20rem;
+        height: 100vh;
+        margin-top: -25rem;
     }
     .Portfolio__cantainer {
         width: 100vw;
-        height: 140vh;
-        margin-top: 3rem;
+        height: 60vh;
+        border: 2px solid red;
+        margin-top: -20rem;
     }
     .portfolio__content {
-        width: 62vw;
+        width: 90vw;
         margin-top: -4rem;
     }
 
@@ -161,8 +167,8 @@
         height: 10vh;
     }
     .portfolio__content2 {
-        width: 62vw;
-        margin-top: 16rem;
+        width: 90vw;
+        margin-top: -10rem;
     }
 }
 
@@ -242,12 +248,13 @@
         overflow-x: hidden;
     }
     .Portfolio {
-        height: 150vh;
+        height: 100vh;
+        margin-top: -10rem;
     }
     .Portfolio__cantainer {
         width: 100vw;
         height: 140vh;
-        margin-top: -3rem;
+        margin-top: -80rem;
     }
     .portfolio__content {
         width: 62vw;
@@ -272,7 +279,7 @@
     }
     .portfolio__content2 {
         width: 55vw;
-        margin-top: 16rem;
+        margin-top: -8rem;
     }
 }
 
