--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
+    background-color: #7054B5;
     position: fixed;
     top: 0;
     left: 0;
@@ -29,6 +29,10 @@
     padding: 3rem;
     z-index: 1;
 }
+
+/* .menu-bar-shadow{
+
+} */
 
 .logo {
     display: flex;
@@ -77,11 +81,19 @@
     background-color: #3B38EB;
     border-radius: 20px;
     transition: .4s;
-
 }
+
+.website__links ul li:active {
+    color: #fff;
+}
+
 .Links {
     text-decoration: none;
     color: #000;
+}
+
+.Links:active {
+    color: #fff;
 }
 
 .contact__btn {
@@ -112,6 +124,7 @@
     transition: all .3s ease-out;
     overflow: hidden;
 }
+
 .contact__btn button:hover {
     position: absolute;
     height: 9vh;
@@ -124,6 +137,7 @@
     /* border: none; */
     transition: all .3s ease-out;
 }
+
 .contact__btn button::before {
     content: "";
     position: absolute;
@@ -136,6 +150,7 @@
     z-index: -1;
     transition: all .3s ease-out;
 }
+
 .contact__btn button:hover::before {
     bottom: 0;
     right: 0;
@@ -144,14 +159,24 @@
     border-radius: 0% 0% 0% 0%;
     transition: all .3s ease-out;
 }
+
 .toggle {
     display: none;
 }
 
-@media screen and (max-width: 768px) {
+.responsive__sideBar {
+    display: none;
+}
+
+.close {
+    display: none;
+}
+
+
+@media screen and (max-width: 600px) {
     .nav__header {
         height: 20vh;
-        width: 105vw;
+        width: 100vw;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -159,42 +184,74 @@
 
     .navbar {
         height: 20vh;
-        width: 112vw;
-        border: 2px solid red;
+        width: 100vw;
         display: flex;
+        gap: 6rem;
         justify-content: space-between;
         align-items: center;
         margin-top: 2rem;
     }
+
     .logo img {
         height: 10vh;
     }
+
     .logo {
         font-size: 0.8em;
     }
 
     .website__links {
         height: 100vh;
-        width: 50vw;
+        width: 60vw;
         display: none;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        border: 2px solid red;
+        border-right: 3px solid #3B38EB;
+        transition: 0.9s;
+    }
+
+    @keyframes sideBar {
+        0% {
+            transform: translateX(-700px);
+        }
+    }
+
+    .website__links .website__ul {
+        height: 100vh;
+        width: 40vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        animation: sideBarOut 0.9s linear forwards;
+        transition: 0.9s;
+    }
+
+    @keyframes sideBarOut {
+        0% {
+            transform: translateX(-100);
+        }
+    }
+
+    .website__links .website__ul li {
+        text-align: start;
+        width: 50vw;
     }
 
     .Mobile__menu__links {
         position: fixed;
-        top: 5rem;
+        top: 0.20rem;
+        left: 0;
         height: 100vh;
-        width: 50vw;
+        width: 60vw;
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: row;
+        flex-direction: column;
         background-color: #fff;
-        border: 2px solid red;
-
+        animation: sideBar 0.9s linear forwards;
+        transition: 0.9s;
     }
 
     .contact__btn {
@@ -207,94 +264,413 @@
     .toggle {
         display: block;
         font-size: 1.7rem;
+        color: #fff;
+        margin-right: -65vw;
     }
 
     .contact__btn {
         display: none;
         width: 20vw;
     }
-}
-@media screen and (max-width: 600px) {
-    .nav__header {
-        height: 20vh;
+
+    .website__links .responsive__sideBar .logo__1 {
+        height: 25vh;
         display: flex;
+        justify-content: center;
         align-items: center;
-        justify-content: space-between;
     }
-    
-    .navbar {
-        height: 20vh;
-        width: 107vw;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-top: 1.7rem;
-    }
-    .contact__btn {
-        display: none;
+
+    .logo__1 img {
+        height: 25vh;
         width: 30vw;
     }
+
+    .website__links .responsive__sideBar {
+        height: 35vh;
+        width: 40vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 7rem;
+    }
+
+    .website__links .close {
+        height: 6.7vh;
+        width: 6.3vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 20px;
+        background-color: #3B38EB;
+        font-size: 1.6em;
+        color: #fff;
+        margin-left: 50vw;
+        margin-top: -8rem;
+    }
+
+    /* .website__links .menu-bar-shadow{
+        border: 2px solid black;
+        background-color: rgba(255, 255, 255, 0.15);
+        z-index: -1;
+    } */
 }
-@media screen and (max-width: 429px) {
+@media screen and (max-width: 768px) and (min-width: 600px) {
+    .nav__header {
+        height: 20vh;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .navbar {
+        height: 20vh;
+        width: 100vw;
+        display: flex;
+        gap: 6rem;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 2rem;
+    }
+
+    .logo img {
+        height: 10vh;
+    }
+
+    .logo {
+        font-size: 0.8em;
+    }
+
+    .website__links {
+        height: 100vh;
+        width: 60vw;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        border-right: 3px solid #3B38EB;
+        transition: 0.9s;
+    }
+
+    @keyframes sideBar {
+        0% {
+            transform: translateX(-700px);
+        }
+    }
+
+    .website__links .website__ul {
+        height: 100vh;
+        width: 60vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        animation: sideBarOut 0.9s linear forwards;
+        padding-top: 3rem;
+        transition: 0.9s;
+    }
+
+    @keyframes sideBarOut {
+        0% {
+            transform: translateX(-100);
+        }
+    }
+
+    .website__links .website__ul li {
+        text-align: start;
+        width: 50vw;
+    }
+
+    .Mobile__menu__links {
+        position: fixed;
+        top: 0.20rem;
+        left: 0;
+        height: 100vh;
+        width: 50vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #fff;
+        animation: sideBar 0.9s linear forwards;
+        transition: 0.9s;
+    }
+
+    .contact__btn {
+        width: 30vw;
+        display: flex;
+        align-items: center;
+        margin-left: 3rem;
+    }
+
+    .toggle {
+        display: block;
+        font-size: 1.7rem;
+        color: #fff;
+        margin-right: -50vw;
+    }
+
+    .contact__btn {
+        display: none;
+        width: 20vw;
+    }
+
+    .logo__1 {
+        height: 25vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 6rem;
+    }
+
+    .logo__1 img {
+        height: 25vh;
+        width: 30vw;
+    }
+
+    .responsive__sideBar {
+        height: 35vh;
+        width: 50vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 2rem;
+    }
+
+    .close {
+        height: 7vh;
+        width: 5.3vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 20px;
+        background-color: #3B38EB;
+        font-size: 1.6em;
+        color: #fff;
+        margin-left: 50vw;
+        margin-top: -7rem;
+    }
+}
+@media screen and (max-width: 600px) and (min-width: 429px) {
+    body {
+        overflow: hidden;
+        width: calc(100vw / 100%);
+    }
+
     .nav__header {
         height: 20vh;
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
-    
+
     .navbar {
         height: 20vh;
-        width: 110vw;
+        width: 100vw;
         display: flex;
         justify-content: space-between;
         align-items: center;
         margin-top: 1rem;
     }
+
     .contact__btn {
         display: none;
         width: 70vw;
     }
+
+    .toggle {
+        display: block;
+        font-size: 1.7rem;
+        color: #fff;
+        margin-right: -50vw;
+    }
+
+    .Mobile__menu__links {
+        position: fixed;
+        top: 0.20rem;
+        left: 0;
+        height: 100vh;
+        width: 50vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #fff;
+        animation: sideBar 0.9s linear forwards;
+        transition: 0.9s;
+    }
+
+    .website__links .responsive__sideBar .logo__1 {
+        height: 25vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .logo__1 img {
+        height: 25vh;
+        width: 30vw;
+    }
+
+    .website__links .responsive__sideBar {
+        height: 35vh;
+        width: 40vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 7rem;
+    }
+
+    .website__links .close {
+        height: 6.7vh;
+        width: 6.3vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 20px;
+        background-color: #3B38EB;
+        font-size: 1.6em;
+        color: #fff;
+        margin-left: 50vw;
+        margin-top: -8rem;
+    }
 }
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 429px) and (min-width: 300px) {
+    body {
+        overflow: hidden;
+        width: calc(100vw / 100%);
+    }
+
+    .nav__header {
+        height: 20vh;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .navbar {
+        height: 20vh;
+        width: 100vw;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 1rem;
+    }
+
+    .contact__btn {
+        display: none;
+        width: 70vw;
+    }
+
+    .toggle {
+        display: block;
+        font-size: 1.7rem;
+        color: #fff;
+        margin-right: -50vw;
+    }
+
+    .Mobile__menu__links {
+        position: fixed;
+        top: 0.20rem;
+        left: 0;
+        height: 100vh;
+        width: 50vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #fff;
+        animation: sideBar 0.9s linear forwards;
+        transition: 0.9s;
+    }
+
+    .website__links .responsive__sideBar .logo__1 {
+        height: 25vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .logo__1 img {
+        height: 25vh;
+        width: 30vw;
+    }
+
+    .website__links .responsive__sideBar {
+        height: 35vh;
+        width: 40vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 7rem;
+    }
+
+    .website__links .close {
+        height: 6.7vh;
+        width: 6.3vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 20px;
+        background-color: #3B38EB;
+        font-size: 1.6em;
+        color: #fff;
+        margin-left: 50vw;
+        margin-top: -8rem;
+    }
+
     .logo {
         width: 50vw;
         margin-top: 1rem;
     }
+
     .logo img {
         height: 7vh;
     }
+
     .logo h1 {
         font-size: 1.9em;
         margin-left: 0.1rem;
     }
+
 }
 @media screen and (max-width: 992px) and (min-width: 769px) {
+    body {
+        overflow: hidden;
+        width: calc(100vh / 100%);
+    }
+
     .navbar {
         height: 20vh;
-        width: 110vw;
+        width: 100vw;
         margin-top: 1.4rem;
     }
+
     .website__links .website__ul {
         width: 60vw;
         list-style: none;
         display: flex;
-        gap: 1.9vw;
-        margin-left: -2rem;
+        gap: 0.5vw;
+        margin-left: -4rem;
         align-items: center;
     }
 
     .website__links .website__ul li {
+        width: 10vw;
         font-size: 0.8em;
         font-weight: 700;
         font-family: Roboto, sans-serif;
         transition: .4s;
     }
+
     .logo img {
         height: 10vh;
+        margin-left: -2rem;
     }
+
     .logo h1 {
         font-size: 1.5em;
+        margin-left: -2rem;
     }
 }
 @media screen and (max-width: 1200px) and (min-width: 993px) {
@@ -303,23 +679,27 @@
         width: 110vw;
         margin-top: 1rem;
     }
+
     .website__links .website__ul {
         width: 60vw;
         list-style: none;
         display: flex;
-        gap: 2.5vw;
+        gap: 1.5vw;
         align-items: center;
     }
 
     .website__links .website__ul li {
+        width: 10vw;
         font-size: 1em;
         font-weight: 700;
         font-family: Roboto, sans-serif;
         transition: .4s;
     }
+
     .logo img {
         height: 11vh;
     }
+
     .logo h1 {
         font-size: 1.7em;
     }
